Adding Images and Section1

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prtfolio</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="container">
+        <div class="header-text width-half">
+            <h1>WELCOME TO</h1>
+            <h1 class="bold-header"><span class="orange">Shahir Rahman's</span> World</h1>
+            <h3>Real World Spider Man</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quos accusamus maxime, ipsa laboriosam eum consequatur saepe amet nobis dolore, qui tempore impedit voluptatibus nulla? Laboriosam molestiae hic modi eaque velit natus et provident eum animi autem numquam, est neque!</p>
+            <a class="" href="http://www.linkedin.com/" target="_blank"><button class="buttons">HIRE ME</button></a>
+        </div>
+        <div class="header-img width-half"> 
+            <img class="img-for-head" src="imgs/jhankar.png" alt="My Image 1">
+        </div> 
+    </section>
 </body>
 </html>
