--- a/index.html
+++ b/index.html
@@ -11,17 +11,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="container">
+    <section class="container header1">
         <div class="header-text width-half">
-            <h1>WELCOME TO</h1>
+            <h1>Welcome To</h1>
             <h1 class="bold-header"><span class="orange">Shahir Rahman's</span> World</h1>
-            <h3>Real World Spider Man</h3>
+            <h2>Real World Spider Man</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quos accusamus maxime, ipsa laboriosam eum consequatur saepe amet nobis dolore, qui tempore impedit voluptatibus nulla? Laboriosam molestiae hic modi eaque velit natus et provident eum animi autem numquam, est neque!</p>
             <a class="" href="http://www.linkedin.com/" target="_blank"><button class="buttons">HIRE ME</button></a>
         </div>
+
         <div class="header-img width-half"> 
-            <img class="img-for-head" src="imgs/jhankar.png" alt="My Image 1">
+            <img class="img-for-head img-header1" src="imgs/jhankar.png" alt="My Image 1">
         </div> 
     </section>
+
+
+    <section class="container header2">
+        <div class="header-img width-half"> 
+            <img class="img-for-head" src="imgs/jhankar2.png" alt="My Image 1">
+        </div>
+
+        <div class="header-text width-half">
+            <h1 class="bold-header">Dream <span class="orange"><b>BIG</b></span></h1>
+            <h2>Become a developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quos accusamus maxime, ipsa laboriosam eum consequatur saepe amet nobis dolore, qui tempore impedit voluptatibus nulla? Laboriosam molestiae hic modi eaque velit natus et provident eum animi autem numquam, est neque!</p>
+            <a class="" href="http://www.linkedin.com/" target="_blank"><button class="buttons">Download Resume</button></a>
+        </div>  
+    </section>
+
+
+
 </body>
 </html>
