--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
         <div class="header-img width-half"> 
             <img class="img-for-head img-header1" src="imgs/jhankar.png" alt="My Image 1">
-        </div> 
+        </div>
+        
     </section>
 
 
@@ -38,6 +39,26 @@
             <a class="" href="http://www.linkedin.com/" target="_blank"><button class="buttons">Download Resume</button></a>
         </div>  
     </section>
+
+    <section class="header3">
+        <h1 class="text-exp">Experiences</h1>
+        <div class="only-card">
+            <div class="card card1">
+                <h1>Full Stack Developer</h1>
+                <h2 class="orange">2021-present|Pro Level Developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis eveniet maiores repellat dignissimos cumque cum non, ipsam quam, velit aspernatur dolores at suscipit vitae autem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, laudantium?</p>
+            </div>
+            <div class="card card2">
+                <h1>Front End Developer</h1>
+                <h2 class="orange">2020-2021|Programming Hero Developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis eveniet maiores repellat dignissimos cumque cum non, ipsam quam, velit aspernatur dolores at suscipit vitae autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, dolorum?   </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p> © Peter Parker 2021, a Programming Hero initiative.
+        </p>
+    </footer>
 
 
 
