--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1 class="bold-header">Dream <span class="orange"><b>BIG</b></span></h1>
             <h2>Become a developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quos accusamus maxime, ipsa laboriosam eum consequatur saepe amet nobis dolore, qui tempore impedit voluptatibus nulla? Laboriosam molestiae hic modi eaque velit natus et provident eum animi autem numquam, est neque!</p>
-            <a class="" href="http://www.linkedin.com/" target="_blank"><button class="buttons">Download Resume</button></a>
+            <a class="" href="https://www.facebook.com/" target="_blank"><button class="buttons">Download Resume</button></a>
         </div>  
     </section>
 
